--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "gatsby": "^2.1.37",
     "gatsby-image": "^2.0.34",
+    "gatsby-plugin-glamor": "^2.3.13",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-sharp": "^2.1.17",
+    "glamor": "^2.20.40",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
