--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.27",
+    "gatsby-source-instagram": "^0.9.0",
     "gatsby-transformer-sharp": "^2.1.17",
     "glamor": "^2.20.40",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.1.0",
-    "sharp": "0.26.2"
+    "sharp": "0.26.2",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
