--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "author": "fourpm <fourpm@protonmail.com>",
   "dependencies": {
     "gatsby": "^2.1.37",
-    "gatsby-image": "^2.0.34",
+    "gatsby-image": "^2.7.0",
     "gatsby-plugin-glamor": "^2.3.13",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-source-contentful": "^4.2.1",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-source-instagram": "^0.9.0",
+    "gatsby-transformer-remark": "^2.12.0",
     "gatsby-transformer-sharp": "^2.1.17",
     "glamor": "^2.20.40",
     "prop-types": "^15.7.2",
