--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^2.1.37",
     "gatsby-image": "^2.7.0",
+    "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-glamor": "^2.3.13",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-react-helmet": "^3.0.10",
