--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
     "sharp": "0.26.2",
     "styled-components": "^5.2.0"
   },
